fix overflow bug on carousel

--- a/src/styles/arrow.css
+++ b/src/styles/arrow.css
@@ -1,11 +1,22 @@
 .slick-prev:before {
   color: #2a2921;
-  font-size: 40px;
+  font-size: 25px;
+	position: absolute;
+	left: 25px;
 }
 
 .slick-next:before {
   color: #2a2921;
-  font-size: 40px;
-	position: relative;
-	right: 20px;
+  font-size: 25px;
+	position: absolute;
+	right: 25px;
 }
+
+.slick-dots{
+	position: absolute;
+	right: 4px;
+	bottom: -5px;
+}
+.slick-initialized { overflow: hidden; }
+
+
